# Rock-Paper-Scissors

./: .gitignore  AntsConfig.cmake  AntsConfig.h.in  Anttest.cpp  CMakeLists.txt  Foodtest.cpp  Pheromonetest.cpp  Worldtest.cpp  ant.cpp  ant.h  antsimutils.cpp  antsimutils.h  food.cpp  food.h  foodmap.cpp  foodmap.h  gridwidget.cpp  gridwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindowform.ui  pheromone.cpp  pheromone.h  pheromonemap.cpp  pheromonemap.h  random.cpp  random.h  world.cpp  world.h
qtresources/: qtresources.qrc
